<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
    tools:context=".RegisterActivity">
    <TextView
        android:id="@+id/signup_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/amita_bold"
        android:gravity="center"
        android:text="Connectify"
        android:textColor="#14655D"
        android:textSize="60sp"
        android:transitionName="splash_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/create_your_account"
        android:fontFamily="@font/roboto_medium"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_logo" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Input"
        android:hint="@string/email"
        app:boxBackgroundMode="filled"
        android:layout_marginStart="10dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/signup_email_check"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_email_input"
        app:layout_constraintEnd_toEndOf="@+id/signup_email_input"
        app:layout_constraintTop_toTopOf="@+id/signup_email_input"
        app:lottie_rawRes="@raw/success_check" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Input"
        android:hint="User Name"
        app:boxBackgroundMode="filled"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email_input">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_username_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/signup_username_check"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:scaleType="centerCrop"
        android:layout_marginEnd="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/signup_username_input"
        app:layout_constraintEnd_toEndOf="@+id/signup_username_input"
        app:layout_constraintTop_toTopOf="@+id/signup_username_input"
        app:lottie_rawRes="@raw/success_check" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Input"
        android:hint="@string/password"
        app:boxBackgroundMode="filled"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_username_input">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signup_password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/colorAccentBlueDark"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_input" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/signup_password_check"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_marginEnd="5dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="@+id/login_password_input"
        app:layout_constraintEnd_toEndOf="@+id/login_password_input"
        app:layout_constraintTop_toTopOf="@+id/login_password_input" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="@font/amita"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <TextView
        android:id="@+id/tv_login_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:fontFamily="@font/amita"
        android:text="@string/sign_in"
        android:textColor="#14655D"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

</androidx.constraintlayout.widget.ConstraintLayout>