<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white"
    tools:context=".SignDetailActivity">
    <io.github.florent37.shapeofview.shapes.CircleView
        android:id="@+id/circleView"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_marginTop="88dp"
        android:backgroundTint="#E6D3D3"
        android:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/signup_detail_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/image_detail"
            android:scaleType="centerCrop"
            android:src="@drawable/user"
            />
    </io.github.florent37.shapeofview.shapes.CircleView>
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/circleView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Input"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="10dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColor="@color/colorAccentBlueDark"
                android:textStyle="bold"
                android:maxLines="1"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Input"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="15dp"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:textColor="@color/colorAccentBlueDark"
                android:textStyle="bold"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signup_bio_input"
        style="@style/Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.emoji.widget.EmojiEditText
            android:id="@+id/ed_signup_bio"
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:paddingStart="15dp"
            android:maxLines="4"
            android:textColor="@color/colorAccentBlueDark"
            android:hint="@string/bio"
            android:textStyle="bold"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_medium"
        android:text="Choose your profile picture"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="185dp"
        android:layout_height="50dp"
        android:text="Sign Up"
        android:backgroundTint="@color/colorAccentBlueDark"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/signup_bio_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>